# Cloud-Storage-Analytics

./: README.md
configfiles/: StormonDbJob.sql  StormonDbJob.xml  StormonHostJob.sql  StormonHostJob.xml  database.xmlp  host.xml  nfsserver.xml  oracle_database.xml  rac_database.xml  stormon_collection_host.xml  stormon_collection_oracle_database.xml  stormon_jobs.sql  stormon_metadata_host.xml
csource/: Makefile.in  configure  diskinq.c  dskinq.c  hpux_swapinfo.c  kdisks.c  ktst.c  mdinfo.c  runcmd.c  scsiinq.c  snmhsinq_hpux.c  stormon.h  syminfo.c  tst
docs/: README-testing.txt  cases.txt  cciss.txt  changes.txt  deployment_faq.txt  diskinfo.txt  emc_api.txt  faq.txt  git_monitoring_reports.txt  inodetest.txt  issues.txt  list_of_tasks.txt  map_metrics.txt  mapfile.txt  metric_analysis.txt  metrics.txt  metrics_fs.txt  opssm.txt  reporting_views.txt  repository_fs.txt  storage_fs.txt  stormon_notes.txt  stormon_process.txt  swraid.txt  syminfo.txt  testing.txt  windows_storage.txt
readme/: README.txt  README9i.txt  README_repository.txt  README_stormon_mozart.txt  README_stormon_package.txt  release_notes.txt  test_notes.txt
release/: Makefile.in  chkkey  configure  configure.in
scripts/: app-oradb  dbtst  disks  emd_common.pl  files  nfsresp.pl  storage_report_metrics.pl  stormon  stormon_root.sh  subnets.txt  swraid  tmd.sh  update_dc.pl  volumes
scripts/storage/: App.pm  Emc.pm  Filesystem.pm  Hitachi.pm  Hpux.pm  Linux.pm  Register.pm  Solaris.pm  Storage.pm  Sun.pm  Upload.pm  Utilities.pm  Veritas.pm  sRawmetrics.linux.pm  sRawmetrics.solaris.pm  sUtilities.pm
source/: btest  ccissinfo.c  configure.in  idainfo.c  ideinfo.c  run_prtvtoc.c  run_pvdisplay.c  run_raw.c  run_sfdisk.c  run_vxprint.c  stormon.c
sql/: cr_temp_test.sql  gendummydata.sql  gentstdata.sql  p.sql  q.sql  runsum.sql  storage_combcheck.sql  storage_summary_analysis.sql  storage_summary_db_9i.sql  storage_summary_load.sql  storage_summary_test.sql  test.sql  time.sql  time_details.sql  time_jobs.sql  tmp.sql
sql/maintenance/: addmetrics  alter_dev_schema.sql  cr_mgmt_storage_views.sql  cr_stormon_mozart_schema.sql  cr_stormon_schema_size.sql  cr_stormon_user.sql  cr_tbs.sql  drop_stormon_schema.sql  grant_gen.sql  modify_stormon_schema.sql  refresh_dev_master_data.sql  refresh_dev_storage_data.sql  refresh_prod_master_data.sql  refresh_stormon_mozart_masters.sql  setts.sql  stormon_health_report.sql
test/: addtargets  atst  blddir  comb.pl  dtst  ftst  maketest  pretender  repdir  runtest  stormon_addtargets.sql  stst  testblkload  testdbs  testload  testmetrics  testop  testraw.sql  teststdout  tst_db_libs.pl  vtst
test/capture_storage_map/: README.txt  atgt.sql  chk  chk.pl  chk.sh  drt.sql  mt.lst  nft.sql  refresh.sh  rtst.sh  setup.sh  ssuid.sh  storage_layout.txt  storage_report_metrics.pl  str  thl.tst  thm.sh  thm.tst  thmc.sh  thmc.tst  thmr.sh  thmr.tst  tht.tst  tmd.tst  tmda.tst  tmdf.tst  tnmhs.sql  tnmhsrcmd  tnmhsslp  tst  tst.pl
test/teststorage/: nmhsalia.txt  nmhsdata.txt  nmhsfcsh.txt  nmhsissu.txt  nmhskeys.txt
ui/: storage.sql  storage_new.sql  storage_summary_report.sql
utils/: bo  csql  excmd  indt  scr
visualizer/: cr_mgmt_storage_views.sql  cr_schema.sql  data_tables.sql  ecm_storage_metadata.xml  fetch_map  map_disp  mapload  maptree  query.sql
